[project]
name = "cmdbot"
version = "0.1.0"
description = "código principal do interpretador e bot discord do cmdBOT"
authors = [
    {name = "Pedro",email = "wrenchwastaken@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord (>=2.3.2,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "google-genai (>=1.50.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
